...
    navigation.navigate("MoodQuestion");
  };

  return (
    <ScrollView
      contentContainerStyle={styles.container}
      testID="questionnaireView"
    >
      {/* Title */}
      <Text style={styles.title}>{QUESTIONNAIRE.title}</Text>

      {/* Progress */}
      <Text style={styles.progress}>
...
